# WebCore

./: .gitignore  CHANGELOG.md  README.md  README_EN.md  README_FR.md  release.sh
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md  runtime.md  spec.md
editors/vscode/: LICENSE  README.md  extension.js  language-configuration.json  package.json
editors/vscode/snippets/: webc.json
editors/vscode/syntaxes/: webc.tmLanguage.json
examples/blog/: theme.toml  webc.toml
examples/blog/src/: app.webc
examples/counter/: theme.toml  webc.toml
examples/docs/: theme.toml  webc.toml
examples/docs/public/: docs.css
examples/docs/src/: app.webc
examples/forms/: theme.toml  webc.toml
examples/i18n/: theme.toml  webc.toml
examples/todo/: theme.toml  webc.toml
webcore-compiler/: Cargo.toml
webcore-compiler/src/: ast.rs  build.rs  check.rs  cli.rs  css_processor.rs  error.rs  errors.rs  grammar.pest  main.rs  parser.rs  serve.rs  ssg.rs  tests.rs  theme.rs
webcore-compiler/src/cli/: assets.rs  build.rs  check.rs  config.rs  fmt.rs  loader.rs  lsp.rs  mod.rs  output.rs  serve.rs
webcore-compiler/src/codegen/: attr_names.rs  codegen_css.rs  codegen_html.rs  codegen_js.rs  css.rs
webcore-compiler/src/codegen/codegen_js/: js_dom.rs  js_events.rs  js_runtime.rs  mod.rs
webcore-compiler/src/codegen/html/: analysis.rs  attrs.rs  component.rs  components.rs  elements.rs  minify.rs  mod.rs  props.rs  shell.rs  slots.rs  tags.rs  utils.rs
webcore-compiler/src/codegen/js/: dom.rs  events.rs  js_dom.rs  js_events.rs  js_runtime.rs  mod.rs  runtime.rs  sourcemap.rs
webcore-compiler/src/core/: ast.rs  diag.rs  error.rs  mod.rs  ssg.rs  theme.rs  utils.rs
webcore-compiler/src/parser/: declarations.rs  directives.rs  elements.rs  mod.rs
webcore-compiler/src/tests/: css.rs  errors.rs  features.rs  html.rs  i18n.rs  js.rs  mod.rs  security.rs  ssg.rs
webcore-compiler/tests/: integration.rs
(+36 files in other folders)
