[package]
name = "webcore-compiler"
version = "3.2.0"
edition = "2021"
license = "MIT"

[dependencies]
toml = "0.9.6"
serde = { version = "1.0", features = ["derive"] }
lightningcss = "1.0.0-alpha.67"
notify = "8.2.0"
tiny_http = "0.12"
open = "5"
qrcode = "0.14"
image = { version = "0.24", default-features = false, features = ["png", "ico"] }
pest = "2.7"
pest_derive = "2.7"
regex = "1.10"
tungstenite = "0.26"
imagesize = "0.12"
sha2 = "0.10"
base64 = "0.22"
serde_json = "1.0"

# Optimized release profile for distributed binaries:
# - lto + codegen-units=1: whole-program optimization (smaller, faster)
# - strip: remove debug symbols from the shipped binary
# - panic=abort: drop unwinding machinery (the CLI never catches panics)
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
